# OBC-Firmware-Onboarding

./: .env  .gitignore  CMakeLists.txt  Dockerfile  Makefile  OBC-Firmware-Onboarding.env  OBC-firmware\.env  README.md  challenge.c  challenge.h  challenge.md  global_vars.mk  log  main.c  sources.mk  tempCodeRunnerFile.c
.github/: auto_assign.yml
.github/workflows/: action.yml  build.yml  run.yml  test.yml  tests.yml
cmake/: fetch_googletest.cmake  toolchain_gcc.cmake
common/include/: obc_assert  obc_assert.h  obc_errors.h
drivers/include/: serial_io.h
drivers/source/: serial_io.c
freertos/: CMakeLists.txt
freertos/include/: FreeRTOS.h  FreeRTOSConfig.h
hal/: onboarding.dil  onboarding.hcg  rm46_gcc_test.dil  rm46_gcc_test.hcg
hal/include/: FreeRTOSConfig.h  adc.h  mpu_wrappers.h  os_task.h  queue.h  sci.h
hal/source/: adc.c  notification.c  os_required_fns.c  pinmux.c  sci.c
lm75bd/: lm75bd.c  lm75bd.h
onboarding/include/: amb_light_service.h  controller.h
onboarding/source/: amb_light_service.c  controller.c
services/controller/: controller.c  controller.h
services/thermal_mgr/: thermal_mgr.c  thermal_mgr.h
sys/: errors.h  obc_errors.h
sys/console_io/: console.c  console.h
sys/i2c/: i2c_io.c  i2c_io.h
sys/logging/: logging.c  logging.h
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mock_logging.c  test_driver.cpp  test_i2c.cpp  test_mock.cpp
test/Testing/Temporary/: CTestCostData.txt
test/fff/: fff.h
test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  onboarding-tests
